fix align style on homepage

--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -8,7 +8,7 @@
 .option {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: 12px 0;
 }
@@ -34,4 +34,5 @@
     color: var(--black);
     text-align: center;
     max-width: 164px;
+    flex: 1;
 }
